Fix window hidden behind menu on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,8 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  width: 100vw;
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 a {
